--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,6 @@ dmypy.json
 
 !nginx/dist
 
-nginx/dist/ssl/nginx.key
-nginx/dist/ssl/nginx.crt
-nginx/dist/ssl/dhparam4096.pem
+nginx/dist/conf/ssl/nginx.key
+nginx/dist/conf/ssl/nginx.crt
+nginx/dist/conf/ssl/dhparam4096.pem
