--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,29 @@ services:
   nginx-f2ban-web:
     build: ./nginx/
     image: nginx-f2ban-web
+    container_name: nginx-f2ban-web
     read_only: true
+    restart: always
+    tmpfs:
+     - /var/tmp/nginx/client_body
+     - /var/tmp/nginx/proxy
+     - /var/tmp/nginx/fastcgi
+     - /var/tmp/nginx/uwsgi
+     - /var/tmp/nginx/scgi
+     - /run
+     - /var/lib/nginx/tmp:uid=100,gid=82
     ports:
       - 8000:80
+    volumes:
+     - ./data/nginx/log/:/var/log/nginx/
+
 
   app-f2ban-web:
     build: ./app/
     image: app-f2ban-web
+    container_name: app-f2ban-web
     read_only: true
+    restart: always
     volumes:
         - /var/lib/fail2ban/fail2ban.sqlite3:/var/lib/fail2ban/fail2ban.sqlite3
 
