--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -9,13 +9,7 @@ RUN apk -U --no-cache add \
       nginx-mod-http-headers-more && \
 #
 ## Setup T-Pot Landing Page, Eleasticvue, Cyberchef 
-    cp -R /root/dist/html/* /var/lib/nginx/html/ && \
-    cd /var/lib/nginx/html/esvue && \
-    tar xvfz esvue.tgz && \
-    rm esvue.tgz && \
-    cd /var/lib/nginx/html/cyberchef && \
-    tar xvfz cyberchef.tgz && \
-    rm cyberchef.tgz && \
+    #cp -R /root/dist/html/* /var/lib/nginx/html/ && \
 #
 ## Change ownership, permissions
     chown root:www-data -R /var/lib/nginx/html && \
@@ -25,8 +19,11 @@ RUN apk -U --no-cache add \
     rm -rf /etc/nginx/conf.d/* /usr/share/nginx/html/* && \
     mkdir -p /etc/nginx/conf.d && \
     cp /root/dist/conf/nginx.conf /etc/nginx/ && \
-    cp -R /root/dist/conf/ssl /etc/nginx/ && \
-    cp /root/dist/conf/tpotweb.conf /etc/nginx/conf.d/ && \
+    mkdir -p /etc/nginx/cert/ && \
+    cp /root/dist/conf/ssl/nginx.crt /etc/nginx/cert/ && \
+    cp /root/dist/conf/ssl/nginx.key /etc/nginx/cert/ && \
+    cp /root/dist/conf/ssl/dhparam4096.pem /etc/nginx/cert/ && \
+    cp /root/dist/conf/f2ban-web.conf /etc/nginx/conf.d/ && \
 #
 # Clean up
     rm -rf /root/* && \
