--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,11 @@ services:
     container_name: nginx-f2ban-web
     read_only: true
     restart: always
-    tmpfs:
-     - /var/tmp/nginx/client_body
-     - /var/tmp/nginx/proxy
-     - /var/tmp/nginx/fastcgi
-     - /var/tmp/nginx/uwsgi
-     - /var/tmp/nginx/scgi
-     - /run
-     - /var/lib/nginx/tmp:uid=100,gid=82
     ports:
     #  - 8000:80
       - 8443:443
     volumes:
       - ./data/nginx/log/:/var/log/nginx/
-
 
   app-f2ban-web:
     build: ./app/
@@ -26,8 +17,8 @@ services:
     read_only: true
     restart: always
     # For debug only, it should be commented later
-    ports:
-      - 127.0.0.1:5000:5000
+    #ports:
+    #  - 127.0.0.1:5000:5000
     volumes:
         - /var/lib/fail2ban/fail2ban.sqlite3:/var/lib/fail2ban/fail2ban.sqlite3
 
